# optimal-ipr

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: top2000_SB2024.xlsx
notebooks/: full_model.ipynb  full_model_current_v2_LAST_WORKING_VERSION.ipynb  matching_to_og_notebook.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
notebooks/robustness/: BASE_K.ipynb  C_MIN_COST.ipynb  FEE_M.ipynb  GAMMA_C_COST.ipynb  K.ipynb  M_COMP.ipynb  NOISE.ipynb  N_V.ipynb  SIGMA.ipynb  TARGET_AVG_COST_SHARE.ipynb  ZETA.ipynb  _run_all.py
notebooks/robustness/results/robustness/: c_min_cost_sweep.csv  fee_M_sweep.csv  gamma_c_cost_sweep.csv  (+9 more)
results/: full_model_results.csv
src/optimal_ipr/: __init__.py
src/optimal_ipr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/optimal_ipr/baseline/: __init__.py  baseline_model.py
src/optimal_ipr/cost/: __init__.py  innovation_cost.py
src/optimal_ipr/distributions/: __init__.py  type_distribution.py  value_distribution.py
src/optimal_ipr/fee/: __init__.py  fee_schedule.py
src/optimal_ipr/government/: __init__.py  government_model.py
src/optimal_ipr/lookup/: __init__.py  cutoffs.py
src/optimal_ipr/outcomes/: Untitled.ipynb  __init__.py  welfare_outcomes.py
src/optimal_ipr/probability/: __init__.py  subjective_probability.py
src/optimal_ipr/regulator/: __init__.py  regulator_model.py
tests/: test_fee_schedule.py  test_government_model.py  test_innovation_cost.py  test_regulator_model.py  test_subjective_probability.py  test_value_distribution.py  test_vectorized_models.py
(+1 files in other folders)
